--- a/src/index.css
+++ b/src/index.css
@@ -1,69 +1,68 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+* {
+  box-sizing: border-box;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  margin: 0 auto;
+  padding: 15px;
+  background-color: #0b2434;
+  text-align: center;
+  color: #2b283a;
+}
+p {
+  margin-bottom: 1em;
+  max-width: 340px;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  margin: 0;
+}
+main {
+ background-color: #f5f5f5;
+ min-height: 400px;
+ max-width: 400px;
+ border-radius: 7px;
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+ align-items: center;
+ margin-top: 3em;
+}
+.die--face {
+  width: 50px;
+  height: 50px;
+  border: none;
+  background-color: #ffffff;
+  border-radius: 0.2em;
+  margin: 0em;
+  box-shadow: 0px 2px 2px rgba(0,0,0,0.15);
+  font-size: 2rem;
+  color: #2b283a;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.dice--container {
+padding: 15px;
+display: flex;
+justify-content: center;
+align-items: center;
+flex-wrap: wrap;
+width: 100%;
+gap:15px
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+  margin-top: 0.5em;
+  width: 5em;
+  height: 2em;
+  border: none;
+  border-radius: 4px;
+  font-weight: 700;
+  color: #ffffff;
+  font-size: 1.2rem;
+  letter-spacing: 0.05em;
+  background-color: #5035ff;
+  box-shadow: 0px 3px, 7px rgba(0, 0, 0, 0.18);
 }
