--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,17 @@ main {
  align-items: center;
  margin-top: 3em;
 }
+
+.dice--container {
+  padding: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 100%;
+  gap:15px
+  }
+
 .die--face {
   width: 50px;
   height: 50px;
@@ -36,21 +47,14 @@ main {
   border-radius: 0.2em;
   margin: 0em;
   box-shadow: 0px 2px 2px rgba(0,0,0,0.15);
-  font-size: 2rem;
-  color: #2b283a;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.dice--container {
-padding: 15px;
-display: flex;
-justify-content: center;
-align-items: center;
-flex-wrap: wrap;
-width: 100%;
-gap:15px
+.die--number {
+  font-size: 2rem;
+  color: #2b283a;
 }
 
 button {
