--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  padding: 15px;
+  padding: 10px;
   background-color: #0b2434;
   text-align: center;
   color: #2b283a;
@@ -15,6 +15,7 @@ p {
 
 h1 {
   margin: 0;
+  padding-top: 1em;
 }
 main {
  background-color: #f5f5f5;
@@ -59,7 +60,7 @@ main {
 }
 
 button {
-  margin-top: 1.5em;
+  margin-bottom: 2em;
   width: 7.2em;
   height: 2.2em;
   border: none;
@@ -72,3 +73,4 @@ button {
   box-shadow: 0px 3px, 7px rgba(0, 0, 0, 0.18);
   cursor: pointer;
 }
+
