--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@ body {
   background-color: #0b2434;
   text-align: center;
   color: #2b283a;
+  padding-top: 3em;
+  font-family: 'Roboto', sans-serif;
 }
 p {
   margin-bottom: 2em;
@@ -60,7 +62,7 @@ main {
 }
 
 button {
-  margin-bottom: 2em;
+  margin-bottom: 3em;
   width: 7.2em;
   height: 2.2em;
   border: none;
@@ -73,4 +75,22 @@ button {
   box-shadow: 0px 3px, 7px rgba(0, 0, 0, 0.18);
   cursor: pointer;
 }
+
+.game-stats-container {
+  margin: 1em;
+  display: flex;
+  align-items: center;
+  gap: 4em;
+}
+
+.timer {
+  color: #59e391;
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+.game--rolls{
+  font-size: 2rem;
+}
+
 
